--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -2,12 +2,9 @@
 
 <h1>Courses</h1>
 
-<div id="courses">
+<div id="courses" class =" min-w-full flex flex-wrap justify-center gap-14 pb-G " >
   <% @courses.each do |course| %>
     <%= render course %>
-    <p>
-      <%= link_to "Show this course", course %>
-    </p>
   <% end %>
 </div>
 
