--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -1,6 +1,10 @@
-<div id="<%= dom_id course %>" class="max-w-sm rounded-b overflow-hidden shadow-lg hover:bg-grey-300">
+<div id="<%= dom_id course %>" class="max-w-sm rounded-b overflow-hidden shadow-lg hover:bg-pink-100">
   <%= link_to course, class: "flex flex-col h-full" do %>
-    <%= image_tag("https://via.placeholder.com/300") %>
+    <% if course.image.present? %>
+      <%= image_tag course.image, class:"w-full rounded-t"%>
+    <% else %>
+      <%= image_tag("https://via.placeholder.com/300") %>
+    <% end%>
     <p>
       <strong>Title:</strong>
       <%= course.title %>
