--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,11 +1,13 @@
 <p style="color: green"><%= notice %></p>
-<div class="mx-auto w-full flex flex-col lg:flow-row pb-6">
-  <div class="mx-auto w-full">
-    <% if @course.lessons.any? && @course.lessons.first.video.present? %>
-      <%= video_tag @course.lessons.first.video, controls: true, class: "w-full rounde d mb-6" %>
-    <% end %>
 
-
-    <%= link_to "Back to courses", courses_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-200 inline-block font-medium" %>
-  </div>  
+<div class="max-w-md mx-auto bg-white shadow-lg rounded-lg overflow-hidden mt-5">
+  <% if @course.lessons.any? && @course.lessons.first.video.present? %>
+    <%= video_tag @course.lessons.first.video, controls: true, class: "w-full rounded mb-6" %>
+  <% end %>
+  <div class="px-4 py-2">
+    <!-- Content for the card goes here -->
+    <p>This is para </p>
+  </div>
+  <%= link_to "Back to courses", courses_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-200 inline-block font-medium" %>
+  
 </div>
