--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,10 +1,10 @@
 <p style="color: green"><%= notice %></p>
-<div class="max-w-md bg-white shadow-lg rounded-lg overflow-hidden mt-5 ml-5 px-4 py-2">
+<div class="max-w-md rounded-lg overflow-hidden mt-5 ml-5 ">
   <% if @course.lessons.any? && @course.lessons.first.video.present? %>
-    <%= video_tag @course.lessons.first.video, controls: true, class: "w-full rounded mb-6" %>
+    <%= video_tag @course.lessons.first.video, controls: true, class: "w-full rounded mb-2" %>
   <% end %>
-
-<div class="max-w-md mx-auto bg-white shadow-lg rounded-lg overflow-hidden mt-5">
+</div>
+<div class="max-w-md bg-gray-200 shadow-lg rounded-lg overflow-hidden ml-5 mb-5 px-4 py-2">
   <div class="px-4 py-2">
     <% @course.categories.each do |category| %>
       <span class="inline-block bg-gray-200 text-red-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">
@@ -15,8 +15,12 @@
     <span><%= @course.lessons.count %> <%= "lesson".pluralize(@course.lessons.count) %> </span>
     <h1 class = "text-2xl font-bold"><%= @course.title %></h1>
     <p class = "mt-2"><%= @course.description %></p>
-</div>
+
   </div>
 
   <%= link_to "Back to courses", courses_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-200 inline-block font-medium" %>
 
+    <div>
+      <%= render 'sidebar' %>
+    </div>
+    
