--- a/app/views/courses/_sidebar.html.erb
+++ b/app/views/courses/_sidebar.html.erb
@@ -1,1 +1,39 @@
-<div>sidebar</div>
+<div class="flex flex-col lg:pl-6 mt-6 lg:mt-0">
+  <div class="max-w-md bg-gray-200 shadow-lg rounded-lg overflow-hidden ml-5 mb-5 px-4 py-2" >
+    <div class="bg-gray-700 text-white px-4 py-2">
+      <h2 class="text-2xl font-bold">Start Learning</h2>
+    </div>
+    <div class="p-4">
+      <% if user_signed_in? %>
+          <p class="text-gray-700 text-base mb-4">
+            Start the course and begin learning all about the world of web dev.
+          </p>
+      <% else %>
+        <p class="text-gray-700 text-base mb-4">
+          Sign up for free today and start exploring the endless possibilities.
+        </p>
+        <%= link_to "Sign Up", new_user_registration_path, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline transition ease-in-out duration-150" %>
+      <% end %>
+    </div>
+  </div>
+  
+  <% if @course.paid %>
+    <div class="mt-6 bg-white rounded-lg shadow-lg overflow-hidden w-full">
+      <div class="bg-gray-700 text-white px-4 py-2">
+          <h2 class="text-2xl font-bold">Get more content</h2>
+      </div>
+      <div class="p-4">
+        <% if user_signed_in? %>
+            <p class="text-gray-700 text-base mb-4">
+              Unlock more content by purchasing the full course.
+            </p>
+        <% else %>
+          <p class="text-gray-700 text-base mb-4">
+            Sign up for free today and start exploring the endless possibilities.
+          </p>
+          <%= link_to "Sign Up", new_user_registration_path, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline transition ease-in-out duration-150" %>
+        <% end %>
+      </div>
+    </div>
+  <% end %>
+</div>
