--- a/app/views/courses/_sidebar.html.erb
+++ b/app/views/courses/_sidebar.html.erb
@@ -1,38 +1,70 @@
-<div class="flex flex-col lg:pl-6 mt-6 lg:mt-0">
-  <div class="max-w-md bg-gray-200 shadow-lg rounded-lg overflow-hidden ml-5 mb-5 px-4 py-2" >
-    <div class="bg-gray-700 text-white px-4 py-2">
-      <h2 class="text-2xl font-bold">Start Learning</h2>
-    </div>
-    <div class="p-4">
-      <% if user_signed_in? %>
-          <p class="text-gray-700 text-base mb-4">
-            Start the course and begin learning all about the world of web dev.
-          </p>
-      <% else %>
-        <p class="text-gray-700 text-base mb-4">
-          Sign up for free today and start exploring the endless possibilities.
-        </p>
-        <%= link_to "Sign Up", new_user_registration_path, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline transition ease-in-out duration-150" %>
-      <% end %>
-    </div>
-  </div>
-  
-  <% if @course.paid %>
-    <div class="mt-6 bg-white rounded-lg shadow-lg overflow-hidden w-full">
-      <div class="bg-gray-700 text-white px-4 py-2">
-          <h2 class="text-2xl font-bold">Get more content</h2>
+<div class="flex flex-col">
+  <div class="mt-6">
+    <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+      <div class="bg-blue-500 p-4">
+        <h2 class="text-white text-2xl font-bold">Start Learning</h2>
       </div>
       <div class="p-4">
         <% if user_signed_in? %>
+          <% if @completed_lessons&.any? %>
+            <% if @completed_lessons.count == @course.lessons.count %>
+              <p class="text-gray-700 text-base mb-4">
+                You have completed this course. Congrats!
+              </p>
+              <%= link_to "Watch Again", course_lesson_path(@course, @course.first_lesson), class: "bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full transition ease-in-out duration-150" %>
+            <% else %>
+              <p class="text-gray-700 text-base mb-4">
+                Continue the course and pick up where you left off.
+              </p>
+              <%= link_to "Continue Course", course_lesson_path(@course, @course.next_lesson(current_user)), class: "bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full transition ease-in-out duration-150" %>
+            <% end %>
+          <% else %>
             <p class="text-gray-700 text-base mb-4">
-              Unlock more content by purchasing the full course.
+            Start the course and begin learning all about the world of web dev.
             </p>
+            <%= link_to "Start Course", course_lesson_path(@course, @course.first_lesson), class: "bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full transition ease-in-out duration-150" %>
+          <% end %> 
         <% else %>
           <p class="text-gray-700 text-base mb-4">
-            Sign up for free today and start exploring the endless possibilities.
+          Sign up for free today and start exploring the endless possibilities.
           </p>
-          <%= link_to "Sign Up", new_user_registration_path, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline transition ease-in-out duration-150" %>
+          <%= link_to "Sign Up", new_user_registration_path, class: "bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full transition ease-in-out duration-150" %>
         <% end %>
+      </div>
+    </div>
+  </div>
+  <% if @course.paid %>
+    <div class="mt-6">
+      <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+        <div class="bg-blue-500 p-4">
+          <% if @user_unlocked_course %>
+            <h2 class="text-white text-2xl font-bold">You have premium access</h2>
+          <% else %>
+            <h2 class="text-white text-2xl font-bold">Get more content</h2>
+          <% end %>
+        </div>
+        <div class="p-4">
+          <% if user_signed_in? %>
+            <% if @user_unlocked_course %>
+              <p class="text-gray-700 text-base mb-4">
+              You have unlocked this course. Enjoy!
+              </p>
+              <% if @course.premium_description.present? %>
+                <%= @course.premium_description %>
+              <% end %>
+            <% else %>
+              <p class="text-gray-700 text-base mb-4">
+              Unlock more content by purchasing the full course.
+              </p>
+                <%= button_tag "Unlock Full Course", class: "bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full transition ease-in-out duration-150" %>
+            <% end %>
+          <% else %>
+            <p class="text-gray-700 text-base mb-4">
+            Sign up for free today and start exploring the endless possibilities.
+            </p>
+            <%= link_to "Sign Up", new_user_registration_path, class: "bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full transition ease-in-out duration-150" %>
+          <% end %>
+        </div>
       </div>
     </div>
   <% end %>
