--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,26 +1,26 @@
-<p style="color: green"><%= notice %></p>
-<div class="max-w-md rounded-lg overflow-hidden mt-5 ml-5 ">
-  <% if @course.lessons.any? && @course.lessons.first.video.present? %>
-    <%= video_tag @course.lessons.first.video, controls: true, class: "w-full rounded mb-2" %>
-  <% end %>
-</div>
-<div class="max-w-md bg-gray-200 shadow-lg rounded-lg overflow-hidden ml-5 mb-5 px-4 py-2">
-  <div class="px-4 py-2">
-    <% @course.categories.each do |category| %>
-      <span class="inline-block bg-gray-200 text-red-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">
-        <%= category.name %>
-      </span>
+<div class="mx-auto w-full  flex flex-col lg:flex-row pb-6">
+  <div class="mx-auto w-full">
+    <% if notice.present? %>
+      <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
     <% end %>
-  </div>
-    <span><%= @course.lessons.count %> <%= "lesson".pluralize(@course.lessons.count) %> </span>
-    <h1 class = "text-2xl font-bold"><%= @course.title %></h1>
-    <p class = "mt-2"><%= @course.description %></p>
 
-  </div>
+    <% if @course.lessons.any? && @course.lessons.first.video.present? %>
+      <%= video_tag @course.lessons.first.video, controls: true, class: "w-full rounded mb-6" %>
+    <% end %>
 
-  <%= link_to "Back to courses", courses_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-200 inline-block font-medium" %>
-
-    <div>
-      <%= render 'sidebar' %>
+    <div class="border p-6 rounded">
+      <div class="flex justify-start items-center flex-wrap w-full mb-2">
+        <% @course.categories.each do |category| %>
+          <div class="bg-amaranth-100 text-amaranth-800 text-sm font-semibold mt-2 mr-2 px-2.5 py-0.5 rounded"><%= category.name %></div>
+        <% end %>
+      </div>
+      <span><%= @course.lessons.count %> <%= "lesson".pluralize(@course.lessons.count) %> </span>
+      <h1 class="text-2xl font-bold"><%= @course.title %></h1>
+      <p class="text-gray-500 mt-2"><%= @course.description %></p>
     </div>
-    
+  </div>
+
+  <div>
+    <%= render "sidebar" %>
+  </div>
+</div>
