--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -1,10 +1,20 @@
-<p style="color: green"><%= notice %></p>
+<div class="flex flex-col lg:flex-row-reverse w-full justify-start lg:justify-end pb-6">
+  <div class="max-w-lg mx-auto">
+    <div>
+      <% if notice.present? %>
+        <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
+      <% end %>
+    </div>
 
-<%= render @lesson %>
+    <%= (@lesson.video.present?) ? (video_tag @lesson.video, autoplay: false, controls: true, class: "rounded") : "No video available" %>
 
-<div>
-  <%= link_to "Edit this lesson", edit_lesson_path(@lesson) %> |
-  <%= link_to "Back to lessons", lessons_path %>
+    <div class="my-2 border p-4 rounded">
+      <h1 class="text-2xl font-semibold"><%= @lesson.title %></h1>
+      <p class="text-gray-700"><%= @lesson.description %></p>
+    </div>
 
-  <%= button_to "Destroy this lesson", @lesson, method: :delete %>
+    <div class="my-6 lg:mb-0">
+      <%= link_to "Mark as complete", course_lesson_path(@course, @lesson), data: { 'turbo-method' => :put }, class: "bg-green-500 rounded hover:bg-green-600 text-white px-4 py-2" %>
+    </div>
+  </div>
 </div>
