making some changes

--- a/app/views/lessons/_sidebar.html.erb
+++ b/app/views/lessons/_sidebar.html.erb
@@ -8,10 +8,14 @@
       </div>
     <% else %>
       <%= link_to course_lesson_path(course, lesson) do %>
-        <div class="border p-6 hover:bg-gray-200 <%= @lesson.id == lesson.id ? 'bg-amaranth-100': '' %>">
-          <%= completed_lessons&.include?(lesson.id) ? icon('fa-solid', 'check-circle', class: "mr-2 text-green-500") : nil %>
-          <span class="font-light"><%= lesson.title %></span>
-        </div>
+        <div class="border p-6 hover:bg-gray-200 <%= @lesson.id == lesson.id ? 'bg-amaranth-100' : '' %>">
+  <% if completed_lessons&.include?(lesson.id) %>
+    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="inline-block w-6 h-6 mr-2 text-green-500" viewBox="0 0 24 24">
+      <path d="M9 16.2l-3.5-3.5a1 1 0 1 1 1.4-1.4l2.5 2.5 6.8-6.8a1 1 0 1 1 1.4 1.4l-7.2 7.2a1 1 0 0 1-1.4 0z"/>
+    </svg>
+  <% end %>
+  <span class="font-light"><%= lesson.title %></span>
+</div>
       <% end %>
     <% end %>
   <% end %>
