--- a/app/views/courses/_sidebar.html.erb
+++ b/app/views/courses/_sidebar.html.erb
@@ -59,8 +59,8 @@
                 <%= form_tag checkouts_path(@course), method: :post, class: "mt-4" do %>
                 <%= hidden_field_tag :course_id, @course.id %>
                 <%= hidden_field_tag :stripeEmail, current_user.email %>
-                <%= button_tag "Unlock Full Course", class: "bg-revolver-600 hover:bg-revolver-700 text-white-50 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full transition ease-in-out duration-150" %>
-              <% end %>
+                <%= button_tag "Unlock Full Course", class: "bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full transition ease-in-out duration-150" %>
+                <% end %>
             <% end %>
           <% else %>
             <p class="text-gray-700 text-base mb-4">
