--- a/app/views/admin/courses/_course.html.erb
+++ b/app/views/admin/courses/_course.html.erb
@@ -1,2 +1,13 @@
-<div id="<%= dom_id course %>">
+<div id="<%= dom_id course %>" class="max-w-xs rounded overflow-hidden shadow-lg border border-gray-200">
+  <% if course.image.present? %>
+    <%= image_tag course.image, class: "w-full" %>
+  <% else %>
+    <%= image_tag("https://via.placeholder.com/320x180", class: "w-full") %>
+  <% end %>
+
+  <div class="px-4 py-4">
+    <div class="font-bold text-xl mb-6"><%= course.title %></div>
+    <%= link_to "Edit Course", edit_admin_course_path(course), class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" %>
+    <%= link_to "View Lessons", edit_admin_course_path(course), class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-2 block" %>
+  </div>
 </div>
