--- a/app/views/admin/courses/index.html.erb
+++ b/app/views/admin/courses/index.html.erb
@@ -1,14 +1,13 @@
-<p style="color: green"><%= notice %></p>
+<div class="w-full">
+  <div class="flex justify-end items-center">
+    <a href="<%= new_admin_course_path %>" class="bg-blue-500 hover:bg-blue-600 px-4 py-2 rounded-md text-white text-sm">New course</a>
+  </div>
 
-<h1>Courses</h1>
+  <p style="color: green"><%= notice %></p>
 
-<div id="admin_courses">
-  <% @admin_courses.each do |admin_course| %>
-    <%= render admin_course %>
-    <p>
-      <%= link_to "Show this course", admin_course %>
-    </p>
-  <% end %>
+  <div id="admin_courses" class="min-w-full flex flex-wrap justify-center gap-5 mt-6 pb-6">
+    <% @admin_courses.each do |admin_course| %>
+      <%= render admin_course %>
+    <% end %>
+  </div>
 </div>
-
-<%= link_to "New course", new_admin_course_path %>
