--- a/app/views/admin/courses/_course.html.erb
+++ b/app/views/admin/courses/_course.html.erb
@@ -8,6 +8,6 @@
   <div class="px-4 py-4">
     <div class="font-bold text-xl mb-6"><%= course.title %></div>
     <%= link_to "Edit Course", edit_admin_course_path(course), class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" %>
-    <%= link_to "View Lessons", edit_admin_course_path(course), class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-2 block" %>
+    <%= link_to "View Lessons", admin_course_lessons_path(course), class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-2 block" %>
   </div>
 </div>
