--- a/app/views/admin/courses/edit.html.erb
+++ b/app/views/admin/courses/edit.html.erb
@@ -1,10 +1,8 @@
-<h1>Editing course</h1>
+<div class="w-full flex flex-col justify-start items-center space-y-4">
+  <%= render "form", admin_course: @admin_course %>
 
-<%= render "form", admin_course: @admin_course %>
-
-<br>
-
-<div>
-  <%= link_to "Show this course", @admin_course %> |
-  <%= link_to "Back to courses", admin_courses_path %>
+  <div class="flex space-x-2">
+    <%= link_to "Show this course", [:admin, @admin_course], class: "bg-blue-500 hover:bg-blue-600 text-white rounded cursor-pointer px-4 py-2" %>
+    <%= link_to "Back to courses", admin_courses_path, class: "bg-gray-300 hover:bg-gray-400 text-gray-700 rounded cursor-pointer px-4 py-2" %>
+  </div>
 </div>
