--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,1 +1,57 @@
-<h1> Admin Session </h1>
+<div class="container mx-auto px-4 py-8">
+  <h1 class="text-4xl font-bold mb-8 text-center">Admin Dashboard</h1>
+
+  <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
+    <div class="bg-gradient-to-r from-blue-400 to-blue-300 rounded-lg shadow-xl">
+      <div class="p-6">
+        <h2 class="text-xl font-bold text-white mb-2">Sign Ups</h2>
+        <p class="text-white text-base">
+          <%= @quick_stats[:sign_ups] %>
+        </p>
+      </div>
+    </div>
+
+    <div class="bg-gradient-to-r from-purple-400 to-purple-300 rounded-lg shadow-xl">
+      <div class="p-6">
+        <h2 class="text-xl font-bold text-white mb-2">Sales</h2>
+        <p class="text-white text-base">
+          <%= @quick_stats[:sales] %>
+        </p>
+      </div>
+    </div>
+
+    <div class="bg-gradient-to-r from-green-400 to-green-300 rounded-lg shadow-xl">
+      <div class="p-6">
+        <h2 class="text-xl font-bold text-white mb-2">Lessons Done</h2>
+        <p class="text-white text-base">
+          <%= @quick_stats[:completed_lessons] %>
+        </p>
+      </div>
+    </div>
+
+    <div class="bg-gradient-to-r from-yellow-400 to-yellow-300 rounded-lg shadow-xl">
+      <div class="p-6">
+        <h2 class="text-xl font-bold text-white mb-2">Total Sign Ups</h2>
+        <p class="text-white text-base">
+          <%= @quick_stats[:total_sign_ups] %>
+        </p>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="overflow-x-auto my-6">
+    <h2 class="text-2xl font-bold my-8">Most Popular Courses</h2>
+    <table class="min-w-full bg-white shadow-md rounded-lg overflow-hidden">
+      <thead class="bg-gray-200">
+        <tr>
+          <th class="px-6 py-3 border-b-2 border-gray-300 text-left">Title</th>
+          <th class="px-6 py-3 border-b-2 border-gray-300 text-left">Users</th>
+        </tr>
+      </thead>
+      <tbody class="text-gray-700">
+        <!-- Your table content here -->
+      </tbody>
+    </table>
+  </div>
+</div>
