--- a/app/views/lessons/_sidebar.html.erb
+++ b/app/views/lessons/_sidebar.html.erb
@@ -3,7 +3,7 @@
     <% if lesson.paid && !paid_for_course %>
       <div class="border p-6 hover:bg-gray-200">
         <div>
-          <%= icon('fa-solid', 'lock', class: "mr-2 text-gray-600") %><span class="font-light"><%= lesson.title %></span>
+          <%= lesson.title %></span>
         </div>
       </div>
     <% else %>
