--- a/app/views/admin/courses/show.html.erb
+++ b/app/views/admin/courses/show.html.erb
@@ -5,6 +5,6 @@
 
   <div class="mt-4 flex gap-4">
     <%= link_to "Back to courses", admin_courses_path %>
-    <%= button_to "Destroy this course", [:admin, @admin_course], data: {turbo_confirm: "Are you sure?","turbo-method": :delet} %>
+    <%= button_to "Destroy this course", [:admin, @admin_course], method: :delete, data: { turbo_confirm: "Are you sure?" } %>
   </div>
 </div>
