--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -39,6 +39,11 @@
     </div>
   </div>
 
+  <%= form_tag admin_add_all_user_to_sendgrid_path, method: :post do %>
+    <%= button_tag 'Add All Users to SendGrid', class: 'mt-5 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded' %>
+  <% end %>
+
+
 
   <div class="overflow-x-auto my-6">
     <h2 class="text-2xl font-bold my-8">Most Popular Courses</h2>
